--- a/03_Jenkins/week13/04_Github_webhook_Remote_SSH/Jenkinsfile
+++ b/03_Jenkins/week13/04_Github_webhook_Remote_SSH/Jenkinsfile
@@ -4,7 +4,7 @@ pipeline {
     environment {
         // It's good practice to keep sensitive or specific data like Docker images, remote hosts, and credentials out of the script for security and flexibility.
         DOCKER_IMAGE    = 'thanakornsri/fastapi-webhook:latest' // Ensure this Docker image name is correct and accessible.
-        REMOTE_HOST     = 'g64070040@34.87.146.171' // Replace with your actual username and remote IP.
+        REMOTE_HOST     = 'admin@34.87.146.171' // Replace with your actual username and remote IP.
         SSH_CREDENTIALS = 'ssh_prod_instance' // Use the ID of the Jenkins stored SSH credentials.
     }
 
